--- a/static/style.css
+++ b/static/style.css
@@ -21,12 +21,6 @@
   box-shadow: none; /* Remove the box shadow */
 }
 
-.header {
-  background-color: red;
-  color: #ffffff;
-  padding: 10px;
-  border-radius: 8px 8px 0 0;
-}
 
 .progress {
   height: 100%;
@@ -292,13 +286,14 @@ p {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .movie-poster {
   position: relative;
   width: 200px; /* Set the desired width for the movie posters */
   margin: 10px;
-  overflow: hidden;
 }
 
 .movie-poster img {
@@ -444,4 +439,144 @@ p {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+    .hamburger-btn {
+
+      display: none; /* Hide the button by default */
+    }
+@media screen and (max-width: 768px) {
+  .menu a {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 12px;
+}
+  .menu {
+    display: none;
+  }
+
+  .hamburger-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+
+  .hamburger-icon {
+    width: 30px;
+    height: 2px;
+    background-color: #ffffff;
+    position: relative;
+    transition: transform 0.3s;
+  }
+
+  .hamburger-icon::before,
+  .hamburger-icon::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    transition: transform 0.3s;
+  }
+
+  .hamburger-icon::before {
+    transform: translateY(-8px);
+  }
+
+  .hamburger-icon::after {
+    transform: translateY(8px);
+  }
+
+  /* Toggle animation */
+  .hamburger-btn.open .hamburger-icon {
+    transform: rotate(45deg);
+  }
+
+  .hamburger-btn.open .hamburger-icon::before {
+    transform: translateY(0) rotate(45deg);
+  }
+
+  .hamburger-btn.open .hamburger-icon::after {
+    transform: translateY(0) rotate(-45deg);
+  }
+
+  /* Show menu when hamburger button is clicked */
+  .hamburger-btn.open ~ .menu {
+    display: block;
+  }
+}
+.moviename{
+  color: white;
+
+}
+.movie-posters-container {
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding-bottom: 20px; /* Add bottom padding to accommodate movie poster's height */
+}
+
+.movie-posters {
+  display: inline-block;
+}
+
+.movie-poster {
+  display: inline-block;
+  margin-right: 20px;
+  width: 200px;
+}
+
+.movie-poster img {
+  width: 100%;
+  height: auto;
+}
+
+.container2{
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+
+.left-arrow,
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #333333;
+  color: #fff;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transform: translateY(-50%);
+
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
+}
+.logo img{
+  position: relative;
+  margin-left: 0px;
+  height: 80px;
+  width: 200px;
+
+}
+.movie-posters-container {
+  overflow: scroll;
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.movie-posters-container::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
