--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name='viewport' content=
+'width=device-width, initial-scale=1.0'>
   <title>Movie Analyzer</title>
   <link rel="stylesheet" type="text/css" href="/static/style.css">
 </head>
